# MLOps-Lab3

./: .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  app.py  class_labels.json  model.onnx  pyproject.toml  requirements.txt
.github/workflows/: CICD.yml
api/: api.py
cli/: cli.py
mylib/: __init__.py  data_preprocess.py  image_processor.py  inference_image_processor.py  serialize.py  train.py
templates/: home.html
tests/: test_api.py  test_cli.py  test_logic.py  test_model_artifacts.py
